--- a/index.html
+++ b/index.html
@@ -5,9 +5,52 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-  
+    <!-- Heading  Start  -->
+   <header>
+    <!-- Navigation Start  -->
+   <div class="bg-header"> <nav   class=" container navbar navbar-expand-lg ">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#"><img  class="h5 "  height="50px" width="200px" src="icons/Logo.png" alt=""> </a>
+          <div><button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              
+              <a class="nav-link" href="#">Product</a>
+              <a class="nav-link ">About us</a>
+            </div>
+          </div></div>
+        </div>
+         
+      </nav>
+      <!-- Navigation End  -->
+
+      <section class="container grid row row-cols-1 row-cols-lg-2
+       ">
+        <div class="order-2 order-lg-1 ">
+            <img class = "w-75 " src="images/Group 33092.png">
+        </div>
+       <div class="order-1 order-lg-2"> <h1><span class="text-orange">Nike React</span> <br>
+        Infinity Run 2</h1>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nostrum impedit nihil facilis. Expedita, dolore.</p>
+        <a href="" class="btn btn-primary">Buy Now</a>
+    </div>
+      </section>
+   </div>
+   </header>
+
+
+
+
+
+
+
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
   </body>
 </html>
