--- a/index.html
+++ b/index.html
@@ -1,56 +1,171 @@
 <!doctype html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap demo</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
-  </head>
-  <body>
+</head>
+
+<body>
     <!-- Heading  Start  -->
-   <header>
-    <!-- Navigation Start  -->
-   <div class="bg-header"> <nav   class=" container navbar navbar-expand-lg ">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#"><img  class="h5 "  height="50px" width="200px" src="icons/Logo.png" alt=""> </a>
-          <div><button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
-              
-              <a class="nav-link" href="#">Product</a>
-              <a class="nav-link ">About us</a>
+    <header>
+        <!-- Navigation Start  -->
+        <div class="bg-header ">
+            <nav class=" container navbar navbar-expand-lg ">
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="#"><img class="h5 " height="50px" width="200px" src="icons/Logo.png"
+                            alt=""> </a>
+                    <div><button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup"
+                            aria-expanded="false" aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                            <div class="navbar-nav">
+                                <a class="nav-link active" aria-current="page" href="#">Home</a>
+
+                                <a class="nav-link" href="#">Product</a>
+                                <a class="nav-link ">About us</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </nav>
+            <!-- Navigation End  -->
+
+            <section class="container pb-5">
+                <div class="grid row row-cols-1 row-cols-lg-2">
+                    <div class="order-2 order-lg-1 ">
+                        <img class="w-75 " src="images/Group 33092.png">
+                    </div>
+                    <div class="order-1 order-lg-2  d-flex  align-items-center">
+                        <div>
+                            <h1><span class="text-orange">Nike React</span> <br>
+                                Infinity Run 2</h1>
+                            <p>Lore mx-3 mb-2 m ipsum dolor, sit amet consectetur adipisicing elit. Nostrum impedit
+                                nihil facilis. Expedita, dolore.</p>
+                            <a href="" class="btn btn-primary fw-bold fs-4 p-3"><img height="27px" width="27px"
+                                    src="icons/shopping-cart 1.png"> Buy Now</a>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </div>
+    </header>
+    <!-- Header End  -->
+    <main>
+        <!-- Shoes Section  Started -->
+        <section class="container  mt-5">
+            <h1 class="mb-4  text-center text-lg-start">Casual Shoes</h1>
+            <div class="grid row row-cols-1   row-cols-lg-3 g-5">
+                <div>
+                    <div class="bg-gray border rounded-4"><img class="w-75 mx-auto d-block"
+                            src="images/Daco_1703273 1.png"></div>
+                    <h1 class="mt-2">Nike Shoes</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum at eaque culpa provident
+                        recusandae. Excepturi?</p>
+                    <div class=" mx-2 mb-2 d-flex justify-content-between align-items-center">
+                        <h2 class="text-orange">$234</h2>
+                        <a href="#..." class="btn btn-primary fw-bold fs-4 p-2"><img height="27px" width="27px"
+                                src="icons/shopping-cart 1.png">Buy Now</a>
+                    </div>
+                </div>
+                <div>
+                    <div class="bg-gray border rounded-4"><img class="w-75 mx-auto d-block"
+                            src="images/Daco_1703273 1.png"></div>
+                    <h1 class="mt-2">Nike Shoes</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum at eaque culpa provident
+                        recusandae. Excepturi?</p>
+                    <div class=" mx-2 mb-2 d-flex justify-content-between align-items-center">
+                        <h2 class="text-orange">$234</h2>
+                        <a href="#..." class="btn btn-primary fw-bold fs-4 p-2"><img height="27px" width="27px"
+                                src="icons/shopping-cart 1.png">Buy Now</a>
+                    </div>
+                </div>
+                <div>
+                    <div class=" bg-gray border rounded-4"><img class="w-75 mx-auto d-block"
+                            src="images/Daco_1703273 1.png"></div>
+                    <h1 class="mt-2">Nike Shoes</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum at eaque culpa provident
+                        recusandae. Excepturi?</p>
+                    <div class=" mx-2 mb-2 d-flex justify-content-between align-items-center">
+                        <h2 class="text-orange">$234</h2>
+                        <a href="#..." class="btn btn-primary fw-bold fs-4 p-2"><img height="27px" width="27px"
+                                src="icons/shopping-cart 1.png">Buy Now</a>
+                    </div>
+                </div>
             </div>
-          </div></div>
-        </div>
-         
-      </nav>
-      <!-- Navigation End  -->
+        </section>
 
-      <section class="container grid row row-cols-1 row-cols-lg-2
-       ">
-        <div class="order-2 order-lg-1 ">
-            <img class = "w-75 " src="images/Group 33092.png">
-        </div>
-       <div class="order-1 order-lg-2"> <h1><span class="text-orange">Nike React</span> <br>
-        Infinity Run 2</h1>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nostrum impedit nihil facilis. Expedita, dolore.</p>
-        <a href="" class="btn btn-primary">Buy Now</a>
-    </div>
-      </section>
-   </div>
-   </header>
+        <!-- Shoes Section End  -->
 
 
 
+        <!-- Formal Shoes started  -->
+
+        <section class="container  mt-5">
+            <h1 class="mb-4  text-center text-lg-start">Casual Shoes</h1>
+            <div class="grid row row-cols-1   row-cols-lg-3 g-5">
+                <div>
+                    <div class="bg-gray border rounded-4"><img class="w-75 mx-auto d-block"
+                            src="images/Daco_1703273 1.png"></div>
+                    <h1 class="mt-2">Nike Shoes</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum at eaque culpa provident
+                        recusandae. Excepturi?</p>
+                    <div class=" mx-2 mb-2 d-flex justify-content-between align-items-center">
+                        <h2 class="text-orange">$234</h2>
+                        <a href="#..." class="btn btn-primary fw-bold fs-4 p-2"><img height="27px" width="27px"
+                                src="icons/shopping-cart 1.png">Buy Now</a>
+                    </div>
+                </div>
+                <div>
+                    <div class="bg-gray border rounded-4"><img class="w-75 mx-auto d-block"
+                            src="images/Daco_1703273 1.png"></div>
+                    <h1 class="mt-2">Nike Shoes</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum at eaque culpa provident
+                        recusandae. Excepturi?</p>
+                    <div class=" mx-2 mb-2 d-flex justify-content-between align-items-center">
+                        <h2 class="text-orange">$234</h2>
+                        <a href="#..." class="btn btn-primary fw-bold fs-4 p-2"><img height="27px" width="27px"
+                                src="icons/shopping-cart 1.png">Buy Now</a>
+                    </div>
+                </div>
+                <div>
+                    <div class=" bg-gray border rounded-4"><img class="w-75 mx-auto d-block"
+                            src="images/Daco_1703273 1.png"></div>
+                    <h1 class="mt-2">Nike Shoes</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum at eaque culpa provident
+                        recusandae. Excepturi?</p>
+                    <div class=" mx-2 mb-2 d-flex justify-content-between align-items-center">
+                        <h2 class="text-orange">$234</h2>
+                        <a href="#..." class="btn btn-primary fw-bold fs-4 p-2"><img height="27px" width="27px"
+                                src="icons/shopping-cart 1.png">Buy Now</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Formal Shoes End  -->
+    </main>
 
 
 
 
+    <!-- Footer Section Started  -->
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
-  </body>
+
+    <!-- Footer Section End  -->
+
+
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+        crossorigin="anonymous"></script>
+</body>
+
 </html>
