--- a/index.html
+++ b/index.html
@@ -17,9 +17,11 @@
         <div class="bg-header ">
             <nav class=" container navbar navbar-expand-lg ">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="#"><img class="h5 " height="50px" width="200px" src="icons/Logo.png"
-                            alt=""> </a>
-                    <div><button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    <a class="navbar-brand" href="#">
+                                  <img class="h5 " height="50px" width="200px" src="icons/Logo.png" alt=""> 
+                    </a>
+                    <div>
+                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                             data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup"
                             aria-expanded="false" aria-label="Toggle navigation">
                             <span class="navbar-toggler-icon"></span>
@@ -27,7 +29,6 @@
                         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                             <div class="navbar-nav">
                                 <a class="nav-link active" aria-current="page" href="#">Home</a>
-
                                 <a class="nav-link" href="#">Product</a>
                                 <a class="nav-link ">About us</a>
                             </div>
@@ -36,6 +37,7 @@
                 </div>
 
             </nav>
+
             <!-- Navigation End  -->
 
             <section class="container pb-5">
@@ -45,11 +47,12 @@
                     </div>
                     <div class="order-1 order-lg-2  d-flex  align-items-center">
                         <div>
-                            <h1><span class="text-orange">Nike React</span> <br>
+                              <h1>
+                                <span class="text-orange">Nike React</span> <br>
                                 Infinity Run 2</h1>
-                            <p>Lore mx-3 mb-2 m ipsum dolor, sit amet consectetur adipisicing elit. Nostrum impedit
+                              <p>Lore mx-3 mb-2 m ipsum dolor, sit amet consectetur adipisicing elit. Nostrum impedit
                                 nihil facilis. Expedita, dolore.</p>
-                            <a href="" class="btn btn-primary fw-bold fs-4 p-3"><img height="27px" width="27px"
+                              <a href="" class="btn btn-primary fw-bold fs-4 p-3"><img height="27px" width="27px"
                                     src="icons/shopping-cart 1.png"> Buy Now</a>
                         </div>
                     </div>
@@ -60,43 +63,53 @@
     <!-- Header End  -->
     <main>
         <!-- Shoes Section  Started -->
-        <section class="container  mt-5">
+        <section  class="container   mt-5">
             <h1 class="mb-4  text-center text-lg-start">Casual Shoes</h1>
             <div class="grid row row-cols-1   row-cols-lg-3 g-5">
                 <div>
-                    <div class="bg-gray border rounded-4"><img class="w-75 mx-auto d-block"
-                            src="images/Daco_1703273 1.png"></div>
+                    <div class="bg-gray border rounded-4">
+                                       <img class="w-75 mx-auto d-block" src="images/Daco_1703273 1.png">
+                    </div>
                     <h1 class="mt-2">Nike Shoes</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum at eaque culpa provident
-                        recusandae. Excepturi?</p>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum at eaque culpa provident
+                        recusandae. Excepturi?
+                    </p>
                     <div class=" mx-2 mb-2 d-flex justify-content-between align-items-center">
                         <h2 class="text-orange">$234</h2>
-                        <a href="#..." class="btn btn-primary fw-bold fs-4 p-2"><img height="27px" width="27px"
-                                src="icons/shopping-cart 1.png">Buy Now</a>
+                        <a href="#..." class="btn btn-primary fw-bold fs-4 p-2">
+                            <img height="27px" width="27px" src="icons/shopping-cart 1.png ">
+                                Buy Now
+                        </a>
                     </div>
                 </div>
                 <div>
-                    <div class="bg-gray border rounded-4"><img class="w-75 mx-auto d-block"
-                            src="images/Daco_1703273 1.png"></div>
-                    <h1 class="mt-2">Nike Shoes</h1>
+                    <div class="bg-gray border rounded-4">
+                        <img class="w-75 mx-auto d-block" src="images/image 5.png">
+                    </div>
+                    <h1 class="mt-2">Adidas Shoes</h1>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum at eaque culpa provident
                         recusandae. Excepturi?</p>
                     <div class=" mx-2 mb-2 d-flex justify-content-between align-items-center">
                         <h2 class="text-orange">$234</h2>
-                        <a href="#..." class="btn btn-primary fw-bold fs-4 p-2"><img height="27px" width="27px"
-                                src="icons/shopping-cart 1.png">Buy Now</a>
+                        <a href="#..." class="btn btn-primary fw-bold fs-4 p-2">
+                            <img height="27px" width="27px" src="icons/shopping-cart 1.png">Buy Now</a>
                     </div>
                 </div>
                 <div>
-                    <div class=" bg-gray border rounded-4"><img class="w-75 mx-auto d-block"
-                            src="images/Daco_1703273 1.png"></div>
-                    <h1 class="mt-2">Nike Shoes</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum at eaque culpa provident
-                        recusandae. Excepturi?</p>
+                    <div class=" bg-gray border rounded-4">
+                        <img class="w-75 mx-auto d-block" src="images/pngegg 1.png">
+                    </div>
+                          <h1 class="mt-2">Bata Shoes</h1>
+                          <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum at eaque culpa provident
+                              recusandae. Excepturi?
+                            </p>
                     <div class=" mx-2 mb-2 d-flex justify-content-between align-items-center">
                         <h2 class="text-orange">$234</h2>
-                        <a href="#..." class="btn btn-primary fw-bold fs-4 p-2"><img height="27px" width="27px"
-                                src="icons/shopping-cart 1.png">Buy Now</a>
+                        <a href="#..." class="btn btn-primary fw-bold fs-4 p-2">
+                               <img height="27px" width="27px" src="icons/shopping-cart 1.png">Buy Now
+                            </a>
                     </div>
                 </div>
             </div>
@@ -157,6 +170,48 @@
 
     <!-- Footer Section Started  -->
 
+    <footer>
+        <section class="mt-5 container d-flex flex-column-reverse flex-lg-row mb-5">
+            <div class="px-5">
+                <div class="d-flex align-items-center ">
+                    <div>
+                        <img class="me-3" height="50px" width="50px" src="icons/image 12.png">
+                    </div>
+                    <div>
+                        <h1 class="fs-4 mb-1">Find the Perfect Fit</h1>
+                        <p>Everybody is different, which is why we
+                            offer styles for every body.</p>
+                    </div>
+                </div>
+                <div class="d-flex align-items-center ">
+                    <div>
+                        <img class="me-3" height="50px" width="50px" src="icons/image 12.png">
+                    </div>
+                    <div>
+                        <h1 class="fs-4 mb-1">Find the Perfect Fit</h1>
+                        <p>Everybody is different, which is why we
+                            offer styles for every body.</p>
+                    </div>
+                </div>
+                <div class="d-flex align-items-center ">
+                    <div>
+                        <img class="me-3" height="50px" width="50px" src="icons/image 12.png">
+                    </div>
+                    <div>
+                        <h1 class="fs-4 mb-1">Find the Perfect Fit</h1>
+                        <p>Everybody is different, which is why we
+                            offer styles for every body.</p>
+                    </div>
+                </div>
+
+
+            </div>
+            <div class="w-50">
+                <img class="img-fluid" src="icons/XMLID 1.png">
+            </div>
+        </section>
+
+    </footer>
 
     <!-- Footer Section End  -->
 
