--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     <!-- Heading  Start  -->
     <header>
         <!-- Navigation Start  -->
-        <div class="bg-header ">
-            <nav class=" container navbar navbar-expand-lg ">
+        <div class="bg-header container ">
+            <nav class=" fixed-top bg-header container navbar navbar-expand-lg ">
                 <div class="container-fluid">
                     <a class="navbar-brand" href="#">
-                                  <img class="h5 " height="50px" width="200px" src="icons/Logo.png" alt=""> 
+                                  <img class="mb-0 " height="40px" width="200px" src="icons/Logo.png" alt=""> 
                     </a>
                     <div>
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -40,7 +40,7 @@
 
             <!-- Navigation End  -->
 
-            <section class="container pb-5">
+            <section class="container pb-5 mt-5">
                 <div class="grid row row-cols-1 row-cols-lg-2">
                     <div class="order-2 order-lg-1 ">
                         <img class="w-75 " src="images/Group 33092.png">
